style.css
/*-- Base CSS --*/
html{
    font-family: Verdana;
    color: #FFFFFF;
}
body{	
    margin: 0;
	background-color:#1A1A1E;
}
/*-- Base CSS End --*/
/*-- Layout --*/
.column{
    float: left;
    width: 100%;
    padding: 0;
}
.column.left{
    width: 95%;
}
.column.right{
    width: 5%;
    height: 100%;
}
.column.navSide{
    overflow: hidden;
    width: 5%;
}
.column.navMid{
    overflow: hidden;
    margin-left: 5%;
    width: 90%;
    overflow: auto;
    height: 450px;
    
}
.column.navMid::-webkit-scrollbar{
    display: none;
}
.row.top{
    height: 320px;
}
.row.bottom{
    height: 130px;
    width: 600px;
}

/*-- Layout End --*/

/*-- Top Navigation --*/
.topnav {
    z-index: 10;
    overflow: hidden;
    overflow: hidden;
    position: fixed;
    box-sizing: content-box;  
    width: 100%;
    background-color: #0C0C0D;
}
.topnav a {
    float: left;
    color: #FFFFFF;
    text-align: center;
    padding: 20px 18px 20px 18px;
    margin-bottom: 2;
    text-decoration: none;
    font-size: 17px;
}
.topnav a:hover {
    background-color: #D6DDF6;
    color: #1A1A1E;
}
.topnav a.active {
    background-color: #1A1A1E;
    color: #D6DDF6;
}
.topnav a.title {
    background-color: transparent;
    color: #FFFFFF;
    cursor: default;
}
.topnav a.logo {
    float: left;
    margin-left: 12px;
    margin-left: 12px;
    padding: 2px;
    background-color: transparent;
}
.bottomtext {
    font-family: "04b";
    margin-top: 120px;
    padding: 8px;
    background-color: #0C0C0D;
    color: #8C8C8C;
    text-align: center;
}
/*-- Top Navigation End --*/

/*-- customStyle/CSS --*/
/*-- Body --*/
.entrybody{
    width: 100%;
    height: 100%;
    padding-top: 120px;
}
.entry{
    max-width: 800px;
    max-height: 450px;
    min-height: 450px;
    margin: auto;
    background-color:#242428;
}
.entryoperator{
    display: none;
}
/*-- Content --*/
/*-- List Page --*/
.operator.list{
    position: relative;
    max-height: 410px;
    overflow-y: auto;
    transition: 0.5s;
    padding-top: 20px;
    padding-bottom: 20px;
    padding-left: 5%;
    padding-right: 5%; 
}
.operator.list::-webkit-scrollbar{
    display: none;
}
.operator.list img{
    transition: 0.5s;
    width: 120px;
    border: black solid 2px;
}
.op-individual {
    color: black;
    transition: 0.2s;
    margin: 10px;
    padding: 18px;
    float: left;
    background-color: white;
    cursor: pointer;
}
.op-individual:hover {
    box-shadow: 0px 0px 0px 4px white
}
/*-- Operator Page --*/
.operator.select{
    position: relative;
    max-height: 450px;
    width: 100%;
    overflow-y: hidden;
    overflow-x: hidden;
}
.operator.profile{
    max-width: 450px;
    position: relative;
    width: 100%;
    padding: 5%;
}
/*-- Naming --*/
.op-name{
    font-size: 62px;
    text-decoration: underline;
    cursor: default;
}
.artist-name{
    float: left;
    font-size: 28px;
    cursor: pointer;
    background-color: transparent;
    border: 2px solid transparent;
    color: white;
    transition: 0.2s;
}
.artist-name:hover{
    border: 2px solid white;
}
.op-class img{
    margin-top: 8px;
    margin-left: 8px;
    float: left;
    width: 112px;
}
.op-faction{
    position: absolute;
    overflow: hidden;
    transition: 0.5s;
}
.op-faction img{
    width: 296px;
    opacity: 30%;
    margin:-70px 0px 0px -38px;
}
/*-- Operator Image --*/
.op-img {
    padding-top: 20px;
    position: absolute;
    overflow: hidden;
    height: 430px;
    width: 100%;
    right: 0;
}
.op-img img{
    height: 800px
}

/*-- Content --*/
/*-- Buttons --*/
.return {
    float: left;
    margin: 8px;
}
.return img{ 
    height: 48px;
    cursor: pointer;
    transition: 0.4s;
}
.return img:hover{ 
    box-shadow: 0px 0px 0px 1px white;
}
.profile{
    margin-top: 12px;
    float: right;
}
.profile img{
    width: 36px;
    cursor: pointer;
    transition: 0.4s;
}
.profile img:hover{
    box-shadow: 0px 0px 0px 1px white;
}
.voice{
    margin-top: 12px;
    float: right;
}
.voice img{
    width: 36px;
    cursor: pointer;
    transition: 0.4s;
}
.voice img:hover{
    box-shadow: 0px 0px 0px 1px white
}

.profile-content{
    padding: 5%;
}

.voice-content{
    padding: 5%;
}













.sidenav {
    height: 450px;
    width: 0;
    position: absolute;
    z-index: 1;
    top: 0;
    right: 0;
    background-color: #0C0C0D;
    overflow: hidden;
    transition: 0.5s;

}

.sidenav a {
    text-decoration: none;
    color: #818181;
    display: hidden;
    transition: 2.2s;
}

.sidenav a:hover {
    color: #f1f1f1;
}

.closebtn{
    z-index: 1;
    overflow: hidden;
    position: relative;
    font-size: 48px;
    text-decoration: none;
    color: #818181;
    transition: 0.2s;
}
.closebtn:hover{
    transition: 0.2s;   
    color: #f1f1f1;
}







/* The Modal (background) */
.modal {
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  padding-top: 100px; /* Location of the box */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content */
.modal-content {
  background-color: #fefefe;
  margin: auto;
  padding: 20px;
  border: 1px solid #888;
  width: 80%;
}

/* The Close Button */
.close {
  color: #aaaaaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: #000;
  text-decoration: none;
  cursor: pointer;
}

